--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Repo oficial MSX</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>MSX</title>
+  </head>
+  <body>
+    <h1>Página web oficial de Minecraft Server X</h1>
+  </body>
+</html>
