--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="js/tailwind-config.js"></script>
     <title>MSX</title>
   </head>
-  <body>
-    <h1>Página web oficial de Minecraft Server X</h1>
+  <body class="bg-black text-white cursor-[url(img/cursor2.cur),_pointer]">
+    <div id="particles-js" class="w-[100%] h-[100%]">
+      <!-- Contenido aquí -->
+      <img src="img/MSXIMG.png" alt="MSX LOGO" class="rounded-lg w-[10%] h-[10%]">
+    </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+  <script>
+    particlesJS.load('particles-js', 'js/particlesjs-config.json', function() {
+      console.log('callback - particles.js config loaded');
+    });
+  </script>
+  
   </body>
 </html>
